[package]
name = "haych"
description = "Build utils for HTMX application"
license = "MIT"
version = "0.0.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/chazfg/haych"
keywords = ["htmx", "frontend"]
categories = ["command-line-utilities", "development-tools::build-utils", "web-programming"]

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
futures = "0.3.30"
minify = "1.3.0"
notify = "6.1.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
tera = "1.20.0"
toml = "0.8.16"
